<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/total_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#816a43" />

    <TextView
        android:id="@+id/total_txtnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_num"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#639162" />

    <Button
        android:id="@+id/toatlbtn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toal_btn"
        android:background="@drawable/shape"
        android:textColor="#ffffff" />

</LinearLayout>
